tests/paczka1/fuzzy1/70370127.err
Error in line 1: qh5FbYnn17 A79 79,5
Error in line 9: s6KqF5lQ0f4 S499 -1,6
Error in line 13: 9OL7 S433 66,0
Error in line 14: 9OL7 A79 25,9
Error in line 16: KqKK72 S433 38,6
Error in line 21: nAERKpLKze A79 85,7
Error in line 33: qh5FbYnn17 S433 86,1
